<resources>
    <string name="app_name">Yezna</string>

    <string name="login_success">Signed in successfully</string>
    <string name="login_error">Incorrect username or password</string>
    <string name="register_success">Welcome to Yezna, %1$s</string>

    <string name="register">Register</string>
    <string name="login">Sign in</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="logout_success">Signed out successfully</string>
    <string name="logout">Sign out</string>

    <!-- Questions -->
    <string name="no_more_questions">There are no questions left to answer! Why not ask one of your own?</string>
    <string name="no_questions_found">No questions found</string>
    <string name="end_of_questions_list">No more questions</string>
    <!-- Answers -->
    <string name="answer_error">You already answered that question!</string>

    <!-- General errors -->
    <string name="error_default">An unexpected error occurred</string>
    <string name="error_unauthorized">Please sign in</string>
    <string name="error_offline">Currently offline</string>
    <string name="error_timeout">Connection timed out</string>
    <string name="error_server">Can\'t connect to server</string>

    <!-- Status messages -->
    <string name="loading">Loading…</string>
    <string name="no_answers">No answers yet</string>
    <string name="my_questions">My questions</string>
    <string name="profile">Profile</string>
    <string name="public_questions">Public questions</string>
    <string name="ask_question">Ask a question</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="login_prompt">Already a member? Sign in.</string>
    <string name="register_prompt">Create a new account.</string>
    <string name="sign_in_to_answer">Sign in to answer</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="unauthorized_my_questions">Sign in to view your questions</string>
    <string name="no_my_questions">You haven\'t asked any questions yet</string>
    <string name="blank_question_error">Question can\'t be blank</string>
    <string name="type_a_question">Type a yes-no question</string>

    <string name="public_checkbox">Public</string>
    <string name="time_limit_prompt">Never expires</string>

    <string-array name="time_limits">
        <item>Never expires</item>
        <item>Expires in 3 months</item>
        <item>Expires in 1 month</item>
        <item>Expires in 1 week</item>
        <item>Expires in 1 day</item>
    </string-array>

    <string-array name="privacy_options">
        <item>Public</item>
        <item>Private</item>
    </string-array>


    <string name="ask_btn">Ask the world</string>
    <string name="no_image_selected">You haven\'t picked an image</string>
    <string name="title_activity_ask_question">AskQuestionActivity</string>
    <string name="question_too_short_error">Question should be at least %1$s characters</string>
    <string name="profile_update">Profile updated!</string>
    <string name="update_profile">Update Profile</string>

</resources>