<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/connect_actions">
        <item
            android:id="@+id/action_register"
            android:orderInCategory="101"
            android:title="@string/register"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_login"
            android:orderInCategory="102"
            android:title="@string/login"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_logout"
            android:orderInCategory="103"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>

</menu>