<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:maxWidth="380dp"
            android:minWidth="350dp"
            android:orientation="vertical"
            tools:context="com.moobasoft.helloeigo.ui.activities.ConnectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/ic_close_white_24dp"
            android:tint="@color/grey500"/>

        <LinearLayout
            android:id="@+id/main_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="40dp">

            <android.support.design.widget.TextInputLayout style="@style/FormLabel">

                <EditText
                    android:id="@+id/username_et"
                    style="@style/FormTextField"

                    android:hint="@string/username"

                    android:inputType="text"
                    android:text="jim"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_label"
                style="@style/FormLabel">

                <EditText
                    android:id="@+id/email_et"
                    style="@style/FormTextField"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/FormLabel">

                <EditText
                    android:id="@+id/password_et"
                    style="@style/FormTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/password"

                    android:inputType="textPassword"

                    android:text="passer"/>
            </android.support.design.widget.TextInputLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                app:mrl_rippleColor="@color/colorPrimaryDark"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleBackground="@color/colorPrimary"
                app:mrl_rippleRoundedCorners="2dp">
                <TextView
                    android:id="@+id/btn_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingBottom="6dp"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:paddingTop="6dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/main_form"
            android:layout_marginTop="10dp"
            android:background="@color/grey300"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            app:mrl_rippleColor="@color/grey300"
            app:mrl_rippleDelayClick="false">

            <TextView
                android:id="@+id/btn_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/login"
                android:textColor="@color/grey600"
                android:textSize="14sp"/>
        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>
</ScrollView>