<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <ScrollView
        android:id="@+id/ask_question_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey100">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="60dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="40dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/red100"
                    android:textSize="20sp"
                    android:theme="@style/AppTheme.Inverse">

                    <EditText
                        android:id="@+id/question_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_a_question"
                        android:inputType="text|textCapSentences"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/red100"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="22dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="26dp"
                            android:background="@drawable/ic_access_time_white_24dp"
                            app:backgroundTint="@color/grey500"/>

                        <Spinner
                            android:id="@+id/time_limit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/time_limits"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="26dp"
                            android:background="@drawable/ic_public_white_24dp"
                            app:backgroundTint="@color/grey500"/>

                        <Spinner
                            android:id="@+id/public_"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/privacy_options"/>

                        <CheckBox
                            android:id="@+id/public_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:checked="true"
                            android:text="@string/public_checkbox"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="31dp"
                            android:background="@drawable/ic_image_grey_400_24dp"
                            app:backgroundTint="@color/grey500"/>

                        <TextView
                            android:id="@+id/select_image_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="Add an image"
                            android:textColor="@color/grey800"
                            android:textSize="16dp"/>

                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="1dp">

                        <TextView
                            android:id="@+id/ask_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/ask_btn"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>
                    </android.support.v7.widget.CardView>

                    <include layout="@layout/btn_processing"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <include layout="@layout/status_views"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>